--- a/app/src/main/res/layout/fragment_konsultasi.xml
+++ b/app/src/main/res/layout/fragment_konsultasi.xml
@@ -52,7 +52,7 @@
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white" />
+            tools:listitem="@layout/item_list_doctor"/>
 
     </RelativeLayout>
 
