--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,16 @@
         <item name="android:textColorLink">@android:color/black</item>
     </style>
 
+    <style name="SmallRatingBar">
+        <item name="android:scaleX">0.4</item>
+        <item name="android:scaleY">0.4</item>
+        <item name="colorControlActivated">@color/PrimaryColor</item>
+    </style>
+
+    <style name="OrangeRatingBar">
+        <item name="colorControlActivated">@color/PrimaryColor</item>
+    </style>
+
     <!--    font-->
 <!--    Regular White-->
     <style name="poppinsReg10spWhite">
@@ -51,6 +61,11 @@
     <style name="poppinsReg12spBlack">
         <item name="android:fontFamily">@font/poppins</item>
         <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+    <style name="poppinsReg14spBlack">
+        <item name="android:fontFamily">@font/poppins</item>
+        <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/black</item>
     </style>
     <style name="poppinsReg16spBlack">
