--- a/app/src/main/res/layout/fragment_info_vet.xml
+++ b/app/src/main/res/layout/fragment_info_vet.xml
@@ -59,6 +59,40 @@
         android:textAppearance="@style/poppinsMed12spBlack"
         app:iconifiedByDefault="false"
         app:queryHint="Cari" />
+
+        <LinearLayout
+            android:id="@+id/baseButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/SearchView"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <Button
+
+                android:id="@+id/btn_vet"
+                style="@style/poppinsBold14spWhite"
+                android:layout_width="140dp"
+                android:layout_height="50dp"
+                android:layout_marginEnd="20dp"
+                android:backgroundTint="@color/PrimaryColor"
+                android:text="Vet" />
+
+            <Button
+                android:id="@+id/btn_psw"
+                style="@style/poppinsBold14spWhite"
+                android:layout_width="140dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="20dp"
+                android:backgroundTint="@color/PrimaryColor"
+                android:text="Puskeswan" />
+        </LinearLayout>
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fragment_container_info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/baseButton"/>
     </RelativeLayout>
 
 </FrameLayout>
