--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -39,6 +39,11 @@
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">@color/white</item>
     </style>
+    <style name="poppinsBold14spWhite">
+        <item name="android:fontFamily">@font/poppins_bold</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
     <style name="poppinsBold24spWhite">
         <item name="android:fontFamily">@font/poppins_bold</item>
         <item name="android:textSize">24sp</item>
@@ -50,6 +55,17 @@
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">@color/white</item>
     </style>
+    <style name="poppinsSemiBold16spWhite">
+        <item name="android:fontFamily">@font/poppins_semibold</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+    <style name="poppinsSemiBold20spWhite">
+        <item name="android:fontFamily">@font/poppins_semibold</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
 
 
 <!--    RegularBlack-->
@@ -184,6 +200,11 @@
     <style name="poppinsSemiBold14spBlack">
         <item name="android:fontFamily">@font/poppins_semibold</item>
         <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+    <style name="poppinsSemiBold16spBlack">
+        <item name="android:fontFamily">@font/poppins_semibold</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/black</item>
     </style>
     <style name="poppinsSemiBold20spBlack">
