--- a/app/src/main/res/layout/activity_otp_password.xml
+++ b/app/src/main/res/layout/activity_otp_password.xml
@@ -143,14 +143,13 @@
 
             <Button
                 style="@style/poppinsSemiBold16spWhite"
-                android:layout_width="wrap_content"
+                android:layout_width="250dp"
                 android:layout_height="50dp"
+                android:background="@drawable/rectangle_rounded"
                 android:layout_below="@id/line_otp"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="16dp"
-                android:width="250dp"
                 android:id="@+id/btVerif"
-                android:backgroundTint="@color/SecondaryColor"
                 android:text="Verifikasi"
                 android:textAllCaps="false" />
         </RelativeLayout>
