--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -111,15 +111,14 @@
                 />
 
             <Button
+                style="@style/poppinsSemiBold16spWhite"
                 android:id="@+id/btPay"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="250dp"
+                android:layout_height="50dp"
+                android:background="@drawable/rectangle_rounded"
                 android:layout_gravity="center_horizontal"
                 android:paddingHorizontal="64dp"
                 android:layout_marginTop="24dp"
-                android:backgroundTint="#F28705"
-                android:textColor="@color/white"
-                android:textSize="16sp"
                 android:text="Bayar"
                 />
         </LinearLayout>
