--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -89,13 +89,12 @@
     <Button
         style="@style/poppinsSemiBold16spWhite"
         android:id="@+id/btnRegister"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:background="@drawable/rectangle_rounded"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/linear"
-        android:backgroundTint="@color/SecondaryColor"
-        android:text="Gabung"
-        android:width="250dp" />
+        android:text="Daftar"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
