--- a/app/src/main/res/layout/history_consultation_detail.xml
+++ b/app/src/main/res/layout/history_consultation_detail.xml
@@ -15,9 +15,12 @@
         android:layout_height="wrap_content"
         android:background="@drawable/base_orange"
         android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
         android:paddingStart="16dp"
-        android:paddingEnd="16dp">
+        android:paddingEnd="16dp"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -44,14 +47,14 @@
                     style="@style/poppinsBold24spWhite"
                     android:layout_width="wrap_content"
                     android:layout_height="35dp"
-                    android:text="Diskusi yuk!" />
+                    android:text="Riwayat Konsultasi" />
 
                 <TextView
                     android:id="@+id/tvSubTitle"
                     style="@style/poppinsMed12spWhite"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Diskusikan dengan user lain" />
+                    android:text="Detail konsultasi mu" />
             </LinearLayout>
         </RelativeLayout>
 
@@ -73,147 +76,159 @@
             android:layout_height="match_parent" >
 
             <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="16dp">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="16dp">
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_gravity="center"
-            app:cardCornerRadius="6dp">
+                <androidx.cardview.widget.CardView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:layout_gravity="center"
+                    app:cardCornerRadius="6dp">
 
-            <ImageView
-                android:id="@+id/cover"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:src="@drawable/aji"
-                android:adjustViewBounds="true"
-                android:contentDescription="apa"/>
+                    <ImageView
+                        android:id="@+id/cover"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:src="@drawable/aji"
+                        android:adjustViewBounds="true"
+                        android:contentDescription="apa"/>
 
-        </androidx.cardview.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:text="Nama"
-            android:textColor="@color/black"
-            android:textSize="18sp"/>
-        <TextView
-            android:id="@+id/name"
-            android:layout_marginTop="4dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Drh. Aji Kusuma"
-            android:textColor="@color/PrimaryColor"
-            android:textSize="16sp"
-            android:textStyle="bold"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="32dp"
+                    android:text="Nama"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"/>
+                <TextView
+                    android:id="@+id/name"
+                    android:layout_marginTop="4dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Drh. Aji Kusuma"
+                    android:textColor="@color/PrimaryColor"
+                    android:textSize="16sp"
+                    android:textStyle="bold"/>
 
-        <TextView
-            android:layout_marginTop="16dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Instansi"
-            android:textColor="@color/black"
-            android:textSize="18sp"/>
-        <TextView
-            android:id="@+id/instance"
-            android:layout_marginTop="4dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="OJ Pet Care, Batam"
-            android:textColor="@color/PrimaryColor"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+                <TextView
+                    android:layout_marginTop="16dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Instansi"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"/>
+                <TextView
+                    android:id="@+id/instance"
+                    android:layout_marginTop="4dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="OJ Pet Care, Batam"
+                    android:textColor="@color/PrimaryColor"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
-        <TextView
-            android:layout_marginTop="16dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Waktu konsultasi"
-            android:textColor="@color/black"
-            android:textSize="18sp"/>
-        <TextView
-            android:id="@+id/date"
-            android:layout_marginTop="4dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Senin, 3 Oktober 2023"
-            android:textColor="@color/PrimaryColor"
-            android:textSize="16sp"
-            android:textStyle="bold"/>
-        <TextView
-            android:id="@+id/time"
-            android:layout_marginTop="4dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="19:00-20:00"
-            android:textColor="@color/PrimaryColor"
-            android:textSize="16sp"
-            android:textStyle="bold"/>
+                <TextView
+                    android:layout_marginTop="16dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Waktu konsultasi"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"/>
+                <TextView
+                    android:id="@+id/date"
+                    android:layout_marginTop="4dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Senin, 3 Oktober 2023"
+                    android:textColor="@color/PrimaryColor"
+                    android:textSize="16sp"
+                    android:textStyle="bold"/>
+                <TextView
+                    android:id="@+id/time"
+                    android:layout_marginTop="4dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="19:00-20:00"
+                    android:textColor="@color/PrimaryColor"
+                    android:textSize="16sp"
+                    android:textStyle="bold"/>
 
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/pembayaran"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:drawablePadding="100dp"
+                    android:text="Pembayaran"
+                    android:textColor="@color/black"
+                    android:layout_alignParentStart="true"
+                    android:textSize="18sp" />
 
-        <TextView
-            android:layout_marginTop="16dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Pembayaran"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:drawableRight="@drawable/ic_diskusi"/>
-        <TextView
-            android:id="@+id/price"
-            android:layout_marginTop="4dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Rp130.000"
-            android:textColor="@color/PrimaryColor"
-            android:textSize="16sp"
-            android:textStyle="bold"/>
+                    <ImageView
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:layout_toEndOf="@+id/pembayaran"
+                        android:layout_alignTop="@id/pembayaran"
+                        android:layout_alignBottom="@id/pembayaran"
+                        android:layout_marginStart="4dp"
+                        android:src="@drawable/ic_dana_logo" />
+                </RelativeLayout>
+                <TextView
+                    android:id="@+id/price"
+                    android:layout_marginTop="4dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Rp130.000"
+                    android:textColor="@color/PrimaryColor"
+                    android:textSize="16sp"
+                    android:textStyle="bold"/>
 
-        <RatingBar
-            android:id="@+id/ratingBar"
-            android:layout_width="240dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="32dp"
-            style="@style/OrangeRatingBar"
-            android:numStars="5"
-            android:stepSize="0.1"
-            android:rating="3.5" />
+                <RatingBar
+                    android:id="@+id/ratingBar"
+                    android:layout_width="240dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="32dp"
+                    style="@style/OrangeRatingBar"
+                    android:numStars="5"
+                    android:stepSize="0.1"
+                    android:rating="3.5" />
 
-        <Button
-            android:id="@+id/bt_consultationHistory"
-            android:layout_width="350dp"
-            android:layout_height="60dp"
-            android:textSize="20sp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="16dp"
-            android:backgroundTint="#F28705"
-            android:textColor="@color/white"
-            android:text="Lihat Riwayat Konsultasi"
-            android:onClick="onClick"
-            />
+                <Button
+                    android:id="@+id/bt_consultationHistory"
+                    style="@style/poppinsSemiBold16spOrange"
+                    android:layout_width="250dp"
+                    android:layout_height="55dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="16dp"
+                    android:backgroundTint="@color/white"
+                    android:onClick="onClick"
+                    android:text="Lihat Riwayat Konsultasi"
+                    app:strokeColor="@color/PrimaryColor"
+                    app:strokeWidth="2dp" />
 
-        <Button
-            android:id="@+id/bt_newSchedule"
-            android:layout_width="350dp"
-            android:layout_height="60dp"
-            android:textSize="20sp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="8dp"
-            android:backgroundTint="#F28705"
-            android:textColor="@color/white"
-            android:text="Buat Jadwal Baru"
-            android:onClick="onClick"
-            />
+                <Button
+                    style="@style/poppinsSemiBold16spWhite"
+                    android:id="@+id/bt_newSchedule"
+                    android:layout_width="250dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="8dp"
+                    android:background="@drawable/rectangle_rounded"
+                    android:text="Buat Jadwal Baru"
+                    android:onClick="onClick" />
 
+            </LinearLayout>
 
-    </LinearLayout>
         </androidx.core.widget.NestedScrollView>
 
     </RelativeLayout>
