update profile, edit profile, profile kucing, tentang aplikasi

--- a/app/src/main/res/layout/activity_edit_password.xml
+++ b/app/src/main/res/layout/activity_edit_password.xml
@@ -45,14 +45,15 @@
                     style="@style/poppinsBold24spWhite"
                     android:layout_width="wrap_content"
                     android:layout_height="35dp"
-                    android:text="Diskusi yuk!" />
+                    android:textStyle="bold"
+                    android:text="Ubah Password" />
 
                 <TextView
                     android:id="@+id/tvSubTitle"
                     style="@style/poppinsMed12spWhite"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Diskusikan dengan user lain" />
+                    android:text="Ubah Password Akun Kamu" />
             </LinearLayout>
         </RelativeLayout>
 
@@ -78,7 +79,7 @@
         android:padding="15dp">
 
         <TextView
-            style="@style/poppinsSemiBold16spBlack"
+            style="@style/poppinsReg16spBlack"
             android:layout_width="325dp"
             android:layout_height="20dp"
             android:layout_gravity="center"
@@ -94,12 +95,13 @@
             android:textColor="@color/black"
             android:paddingHorizontal="16dp"
             android:paddingStart="5dp"
+            android:hint="Masukkan Password Lama"
             android:background="@drawable/rectangle_rounded_stroke"
             android:inputType="textPassword"/>
 
 
         <TextView
-            style="@style/poppinsSemiBold16spBlack"
+            style="@style/poppinsReg16spBlack"
             android:layout_width="325dp"
             android:layout_height="20dp"
             android:layout_marginTop="24dp"
@@ -114,16 +116,17 @@
             android:layout_gravity="center"
             android:paddingHorizontal="16dp"
             android:paddingStart="5dp"
+            android:hint="Masukkan Password Baru"
             android:background="@drawable/rectangle_rounded_stroke"
             android:inputType="textPassword"/>
 
         <TextView
-            style="@style/poppinsSemiBold16spBlack"
+            style="@style/poppinsReg16spBlack"
             android:layout_width="325dp"
             android:layout_height="20dp"
             android:layout_marginTop="15dp"
             android:layout_gravity="center"
-            android:text="Password Baru"
+            android:text="Konfirmasi Password Baru"
             android:paddingLeft="1dp" />
         <EditText
             style="@style/poppinsReg14spBlack"
@@ -131,6 +134,7 @@
             android:layout_height="40dp"
             android:layout_marginTop="5dp"
             android:paddingHorizontal="16dp"
+            android:hint="Konfirmasi Password Baru"
             android:layout_gravity="center"
             android:background="@drawable/rectangle_rounded_stroke"
             android:inputType="textPassword"/>
@@ -154,7 +158,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="15dp"
             android:width="250dp"
-            android:backgroundTint="@color/SecondaryColor"
+            android:backgroundTint="@color/PrimaryColor"
             android:text="Simpan"
             android:textAllCaps="false"/>
     </LinearLayout>
