--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="black">#3F3D56</color>
     <color name="white">#F5F5F5</color>
     <color name="grey">#A4A4A4</color>
+    <color name="red">#FF1313</color>
 </resources>
