update profile dan isinya

--- a/app/src/main/res/layout/activity_edit_password.xml
+++ b/app/src/main/res/layout/activity_edit_password.xml
@@ -64,6 +64,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="92dp"
+        android:padding="16dp"
         android:background="@drawable/base_white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -80,21 +81,20 @@
 
         <TextView
             style="@style/poppinsReg16spBlack"
-            android:layout_width="325dp"
+            android:layout_width="match_parent"
             android:layout_height="20dp"
             android:layout_gravity="center"
-            android:text="Password Lama"
-            android:paddingLeft="1dp"/>
+            android:text="Password Lama" />
         <EditText
             style="@style/poppinsReg14spBlack"
             android:id="@+id/edt_passwd_lama"
-            android:layout_width="325dp"
+            android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginTop="5dp"
             android:layout_gravity="center"
             android:textColor="@color/black"
             android:paddingHorizontal="16dp"
-            android:paddingStart="5dp"
+
             android:hint="Masukkan Password Lama"
             android:background="@drawable/rectangle_rounded_stroke"
             android:inputType="textPassword"/>
@@ -102,35 +102,32 @@
 
         <TextView
             style="@style/poppinsReg16spBlack"
-            android:layout_width="325dp"
+            android:layout_width="match_parent"
             android:layout_height="20dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="15dp"
             android:layout_gravity="center"
-            android:text="Password Baru"
-            android:paddingLeft="1dp" />
+            android:text="Password Baru" />
         <EditText
             style="@style/poppinsReg14spBlack"
-            android:layout_width="325dp"
+            android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginTop="5dp"
             android:layout_gravity="center"
             android:paddingHorizontal="16dp"
-            android:paddingStart="5dp"
             android:hint="Masukkan Password Baru"
             android:background="@drawable/rectangle_rounded_stroke"
             android:inputType="textPassword"/>
 
         <TextView
             style="@style/poppinsReg16spBlack"
-            android:layout_width="325dp"
+            android:layout_width="match_parent"
             android:layout_height="20dp"
             android:layout_marginTop="15dp"
             android:layout_gravity="center"
-            android:text="Konfirmasi Password Baru"
-            android:paddingLeft="1dp" />
+            android:text="Konfirmasi Password Baru"/>
         <EditText
             style="@style/poppinsReg14spBlack"
-            android:layout_width="325dp"
+            android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginTop="5dp"
             android:paddingHorizontal="16dp"
@@ -141,9 +138,8 @@
         
         <TextView
             style="@style/poppinsReg12spBlack"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="25dp"
             android:layout_marginTop="5dp"
             android:text="* Minimal panjang password 8 karakter"
             android:textStyle="italic"/>
