--- a/app/src/main/res/layout/activity_doctor_detail.xml
+++ b/app/src/main/res/layout/activity_doctor_detail.xml
@@ -90,42 +90,58 @@
                         android:layout_width="150dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:src="@drawable/aji"
                         android:adjustViewBounds="true"
-                        android:contentDescription="apa"/>
+                        android:contentDescription="apa"
+                        android:src="@drawable/aji" />
+
+                    <ImageView
+                        android:id="@+id/Online"
+                        android:layout_gravity="right"
+                        android:layout_width="match_parent"
+                        android:layout_height="20dp"
+                        android:scaleType="fitEnd"
+                        android:src="@drawable/img" />
 
                 </androidx.cardview.widget.CardView>
-                <RatingBar
-                    android:id="@+id/ratingBar"
-                    style="@style/SmallRatingBar"
-                    android:layout_width="240dp"
-                    android:layout_height="40dp"
-                    android:layout_gravity="center"
-                    android:numStars="5"
-                    android:stepSize="0.1"
-                    android:rating="3.5" />
+                <FrameLayout
+                    android:layout_marginTop="15dp"
+                    android:paddingLeft="100dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
 
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
 
-                <TextView
-                    android:id="@+id/price"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="apa"
-                    android:textColor="@color/black"
-                    android:textSize="20sp"
-                    android:lines="1"/>
+                        <TextView
+                            android:id="@+id/price"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:layout_gravity="center"
+                            android:text="5/5"
+                            android:textColor="@color/PrimaryColor"
+                            android:textSize="20sp"/>
 
-                <TextView
-                    android:id="@+id/duration"
-                    android:layout_marginTop="4dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="apa"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"
-                    android:lines="1" />
+                        <RatingBar
+                            android:id="@+id/ratingBar"
+                            style="@style/SmallRatingBar"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="left"
+                            android:numStars="5"
+                            android:stepSize="0.1"
+                            android:rating="5" />
+
+                    </LinearLayout>
+
+                </FrameLayout>
+                <ImageView
+                    android:id="@+id/Garis"
+                    android:src="@drawable/img_1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
 
                 <TextView
                     android:layout_width="wrap_content"
