--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -56,15 +56,19 @@
             android:id="@+id/passwd"
             android:layout_marginTop="10dp"/>
     </LinearLayout>
+
     <TextView
-        style="@style/poppinsMed16spOrange"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/txt_forgot"
-        android:text="Lupa Password?"
+        style="@style/poppinsMed16spOrange"
+        android:layout_width="142dp"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/linear"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"/>
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="-10dp"
+        android:layout_marginEnd="246dp"
+        android:text="Lupa Password?" />
 
     <Button
         style="@style/poppinsSemiBold16spWhite"
