--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="BackgroundColor">#F2F0E4 </color>
     <color name="transparan">#80FFFFFF </color>
     <color name="black">#3F3D56</color>
-    <color name="white">#F5F5F5</color>
+    <color name="putihgelap">#F5F5F5</color>
     <color name="grey">#A4A4A4</color>
+    <color name="white">#FFFFFF</color>
+    <color name="Biru">#0085FF</color>
 </resources>
