--- a/app/src/main/res/layout/activity_edit_profil_kucing.xml
+++ b/app/src/main/res/layout/activity_edit_profil_kucing.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:backgroundTint="@color/white"
-    tools:context=".view.EditProfile">
+    tools:context=".view.Edit_Profil_Kucing">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -47,14 +47,15 @@
                     android:textColor="@color/white"
                     android:layout_width="wrap_content"
                     android:layout_height="35dp"
-                    android:text="Edit Profile" />
+                    android:text="Edit Profil Kucing" />
 
                 <TextView
                     android:id="@+id/tvSubTitle"
                     style="@style/poppinsMed12spWhite"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Diskusikan dengan user lain" />
+                    android:text="Edit profil kucing kamu"
+                    android:textStyle="italic"/>
             </LinearLayout>
         </RelativeLayout>
 
@@ -76,32 +77,34 @@
             android:layout_height="wrap_content"
             >
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/fotoprofile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center"
-            android:layout_marginTop="40dp"
-            android:src="@drawable/usereditprofil" />
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/fotoprofilekucing"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center"
+                android:layout_marginTop="30dp"
+                android:src="@drawable/userprofile2" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/floatingActionButton2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/fotoprofile"
-                android:layout_alignBottom="@+id/fotoprofile"
-                android:layout_marginEnd="-13dp"
-                android:layout_marginBottom="-3dp"
+                android:layout_alignEnd="@+id/fotoprofilekucing"
+                android:layout_alignBottom="@+id/fotoprofilekucing"
+                android:layout_marginEnd="-9dp"
+                android:layout_marginBottom="-1dp"
+                android:backgroundTint="@color/transparan"
                 android:clickable="true"
                 android:src="@drawable/camera"/>
+
             <TextView
                 style="@style/poppinsSemiBold16spBlack"
                 android:id="@+id/txv1"
                 android:layout_width="325dp"
                 android:layout_height="20dp"
                 android:layout_centerHorizontal="true"
-                android:text="Nama"
+                android:text="Nama Kucing"
                 android:layout_marginTop="20dp"
                 android:layout_below="@+id/floatingActionButton2"/>
 
@@ -109,7 +112,7 @@
                 style="@style/poppinsReg14spBlack"
                 android:id="@+id/edtnama"
                 android:layout_width="325dp"
-                android:layout_height="50dp"
+                android:layout_height="38dp"
                 android:layout_marginTop="5dp"
                 android:layout_centerHorizontal="true"
                 android:background="@drawable/rectangle_rounded_stroke"
@@ -119,18 +122,18 @@
             <TextView
                 style="@style/poppinsSemiBold16spBlack"
                 android:id="@+id/txv2"
-                android:layout_width="326dp"
+                android:layout_width="325dp"
                 android:layout_height="20dp"
                 android:layout_marginTop="15dp"
                 android:layout_below="@id/edtnama"
-                android:text="Email"
+                android:text="Jenis Kelamin"
                 android:layout_centerHorizontal="true"/>
 
             <EditText
                 style="@style/poppinsReg14spBlack"
-                android:id="@+id/edt_email"
+                android:id="@+id/jns_kelamin"
                 android:layout_width="325dp"
-                android:layout_height="50dp"
+                android:layout_height="38dp"
                 android:layout_marginTop="5dp"
                 android:layout_below="@+id/txv2"
                 android:background="@drawable/rectangle_rounded_stroke"
@@ -139,32 +142,74 @@
 
             <TextView
                 style="@style/poppinsSemiBold16spBlack"
-                android:id="@+id/txv3"
+                android:id="@+id/txv4"
                 android:layout_width="325dp"
                 android:layout_height="20dp"
                 android:layout_marginTop="15dp"
                 android:layout_centerHorizontal="true"
-                android:layout_below="@id/edt_email"
-                android:text="No Handpone"/>
+                android:layout_below="@id/jns_kelamin"
+                android:text="Tgl Lahir (DD/MM/YYYY)"/>
 
             <EditText
                 style="@style/poppinsReg14spBlack"
                 android:layout_width="325dp"
-                android:layout_height="50dp"
+                android:layout_height="38dp"
                 android:background="@drawable/rectangle_rounded_stroke"
-                android:layout_below="@id/txv3"
+                android:layout_below="@id/txv4"
                 android:layout_centerHorizontal="true"
                 android:inputType="number"
                 android:paddingLeft="10dp"
                 android:layout_marginTop="5dp"
-                android:id="@+id/edt_nohp"/>
+                android:id="@+id/tgl_lhr"/>
+            <TextView
+                style="@style/poppinsSemiBold16spBlack"
+                android:id="@+id/txv5"
+                android:layout_width="325dp"
+                android:layout_height="20dp"
+                android:layout_marginTop="15dp"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/tgl_lhr"
+                android:text="Berat Badan"/>
+
+            <EditText
+                android:id="@+id/berat_bdn"
+                style="@style/poppinsReg14spBlack"
+                android:layout_width="325dp"
+                android:layout_height="38dp"
+                android:background="@drawable/rectangle_rounded_stroke"
+                android:layout_below="@id/txv5"
+                android:layout_centerHorizontal="true"
+                android:inputType="number"
+                android:paddingLeft="10dp"
+                android:layout_marginTop="5dp"/>
+            <TextView
+                style="@style/poppinsSemiBold16spBlack"
+                android:id="@+id/txv6"
+                android:layout_width="325dp"
+                android:layout_height="20dp"
+                android:layout_marginTop="15dp"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/berat_bdn"
+                android:text="Jenis Ras"/>
+
+            <EditText
+                style="@style/poppinsReg14spBlack"
+                android:layout_width="325dp"
+                android:layout_height="38dp"
+                android:background="@drawable/rectangle_rounded_stroke"
+                android:layout_below="@id/txv6"
+                android:layout_centerHorizontal="true"
+                android:inputType="number"
+                android:paddingLeft="10dp"
+                android:layout_marginTop="5dp"
+                android:id="@+id/jns_ras"/>
 
             <Button
                 style="@style/poppinsSemiBold16spBlack"
                 android:id="@+id/btn_edt_profil"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
-                android:layout_below="@id/edt_nohp"
+                android:layout_below="@id/jns_ras"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="15dp"
                 android:width="250dp"
