--- a/app/src/main/res/layout/activity_profil_kucing.xml
+++ b/app/src/main/res/layout/activity_profil_kucing.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.WishListku">
+    android:backgroundTint="@color/white"
+    tools:context=".model.profil_kucing">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -42,16 +43,18 @@
                 <TextView
                     android:id="@+id/tvTitle"
                     style="@style/poppinsBold24spWhite"
+                    android:fontFamily="@font/poppinssemibold"
                     android:layout_width="wrap_content"
                     android:layout_height="35dp"
-                    android:text="Diskusi yuk!" />
+                    android:text="Edit Profil Kucing" />
 
                 <TextView
                     android:id="@+id/tvSubTitle"
                     style="@style/poppinsMed12spWhite"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Diskusikan dengan user lain" />
+                    android:text="Edit Profil Kucing Kamu"
+                    android:textStyle="italic"/>
             </LinearLayout>
         </RelativeLayout>
 
@@ -68,58 +71,36 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <ImageView
-                android:id="@+id/iv_logo_orange"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:adjustViewBounds="true"
-                android:padding="8dp"
-                android:scaleType="fitXY"
-                android:src="@drawable/ic_lingkaran"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.062" />
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="16dp">
 
             <TextView
-                style="@style/poppinsSemiBold14spBlack"
-                android:id="@+id/iv_list1"
-                android:layout_width="252dp"
-                android:layout_height="wrap_content"
-                android:text="Royal Canin Kitten Thin Slice in Gravy"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.106"
-                app:layout_constraintStart_toEndOf="@+id/imageView8"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.048" />
-
-            <ImageView
-                android:id="@+id/imageView8"
-                android:layout_width="54dp"
-                android:layout_height="54dp"
-                android:layout_marginBottom="564dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/iv_logo_orange"
-                app:srcCompat="@drawable/royal_canin_kitten" />
-
-            <ImageView
-                android:id="@+id/imageView9"
+                android:id="@+id/tambah"
+                android:layout_width="90dp"
+                android:layout_height="30dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginEnd="12dp"
+                android:layout_marginBottom="5dp"
+                android:background="@drawable/border_background"
+                android:backgroundTint="@color/PrimaryColor"
+                android:fontFamily="@font/poppinsregular"
+                android:gravity="center"
+                android:text="Tambah +"
+                android:textColor="@color/white"
+                android:textSize="15sp" />
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycleview_ProfilKucing"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/iv_list1"
-                app:srcCompat="@drawable/ic_delete2"
-                tools:layout_editor_absoluteY="38dp" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                android:layout_below="@+id/tambah"
+                android:layout_marginTop="15dp"
+                tools:listitem="@layout/item_profil_kucing"/>
+        </RelativeLayout>
 
     </RelativeLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
+
