--- a/app/src/main/res/layout/activity_pilih_sebagai.xml
+++ b/app/src/main/res/layout/activity_pilih_sebagai.xml
@@ -37,7 +37,7 @@
     </ImageView>
 
     <Button
-        style="@style/poppinsSemiBold16spWhite"
+        style="@style/poppinsSemiBold20spOrange"
         android:id="@+id/BtnDokter"
         android:layout_width="157dp"
         android:layout_height="50dp"
@@ -45,8 +45,7 @@
         android:background="@drawable/rectangle_rounded_stroke_transparent"
         android:text="Dokter"
         android:textAlignment="center"
-        android:textSize="20sp"
-        android:textColor="@color/PrimaryColor"
+        android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.566"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,35 +53,65 @@
 
     </Button>
 
-    <ImageView
-        android:id="@+id/atau"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:src="@drawable/atau"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.579"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/BtnDokter">
+<!--    <ImageView-->
+<!--        android:id="@+id/atau"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="24dp"-->
+<!--        android:src="@drawable/atau"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.579"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/BtnDokter">-->
 
-    </ImageView>
+<!--    </ImageView>-->
+
+    <LinearLayout
+        android:id="@+id/divider"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@id/BtnDokter"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:gravity="center">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_weight="1"
+            android:background="@color/white"/>
+
+        <TextView
+            style="@style/poppinsMed12spWhite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="ATAU"
+            android:textColor="@color/white"
+            android:layout_marginHorizontal="16dp"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_weight="1"
+            android:background="@color/white"/>
+    </LinearLayout>
 
     <Button
-        style="@style/poppinsSemiBold16spWhite"
+        style="@style/poppinsSemiBold20spWhite"
         android:id="@+id/BtnUser"
         android:layout_width="157dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
         android:text="User"
         android:textAlignment="center"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:textColor="@color/white"
+        android:textAllCaps="false"
         android:background="@drawable/rectangle_rounded"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.566"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/atau">
+        app:layout_constraintTop_toBottomOf="@+id/divider">
 
     </Button>
 
