--- a/app/src/main/res/layout/activity_welcome_screen.xml
+++ b/app/src/main/res/layout/activity_welcome_screen.xml
@@ -29,11 +29,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
         <Button
-            style="@style/poppinsSemiBold16spWhite"
+            style="@style/poppinsSemiBold20spOrange"
             android:id="@+id/btDaftar"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
+            android:layout_marginBottom="16dp"
             android:paddingHorizontal="64dp"
+            android:textAllCaps="false"
             android:background="@drawable/rectangle_rounded_stroke_transparent"
             android:text="Daftar" />
 
@@ -47,31 +49,33 @@
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="1.5dp"
+                android:layout_height="1dp"
                 android:layout_weight="1"
                 android:background="@color/white"/>
 
             <TextView
-                style="@style/poppinsSemiBold16spWhite"
+                style="@style/poppinsMed12spWhite"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="ATAU"
                 android:textColor="@color/white"
-                android:layout_margin="5dp"/>
+                android:layout_marginHorizontal="16dp"/>
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="1.5dp"
+                android:layout_height="1dp"
                 android:layout_weight="1"
                 android:background="@color/white"/>
         </LinearLayout>
 
         <Button
-            style="@style/poppinsSemiBold16spWhite"
+            style="@style/poppinsSemiBold20spWhite"
             android:id="@+id/btMasuk"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/rectangle_rounded"
+            android:textAllCaps="false"
             android:paddingHorizontal="64dp"
             android:text="Masuk"/>
     </LinearLayout>
