--- a/app/src/main/res/layout/activity_jadwal_konsultasi.xml
+++ b/app/src/main/res/layout/activity_jadwal_konsultasi.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.HalamanProduk">
-
+    tools:context=".view.JadwalKonsultasiActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -42,17 +41,10 @@
 
                 <TextView
                     android:id="@+id/tvTitle"
-                    style="@style/poppinsBold20spWhite"
+                    style="@style/poppinsBold24spWhite"
                     android:layout_width="wrap_content"
-                    android:layout_height="25dp"
-                    android:text="Rekomendasi Produk" />
-
-                <TextView
-                    android:id="@+id/tvSubTitle"
-                    style="@style/poppinsMed12spWhite"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Direkomendasikan untuk anabul" />
+                    android:layout_height="35dp"
+                    android:text="Jadwal" />
             </LinearLayout>
         </RelativeLayout>
 
@@ -66,44 +58,55 @@
         android:background="@drawable/base_white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0">
 
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvListProduk"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:id="@+id/baseButton"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginHorizontal="48dp"
+            android:padding="2dp"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/rounded_button_background"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <Button
+                style="@style/poppinsSemiBold16spOrange"
+                android:id="@+id/btMendatang"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/rounded_button_background"
+                android:backgroundTint="@color/white"
+                android:text="Mendatang"
+                android:textAllCaps="false" />
+
+            <Button
+                style="@style/poppinsSemiBold16spWhite"
+                android:id="@+id/btTerlewat"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/rounded_button_background"
+                android:text="Telah Berlalu"
+                android:textAllCaps="false" />
+
+        </LinearLayout>
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fragmentContainerView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/baseButton"
             android:layout_alignParentEnd="true"
             android:layout_alignParentStart="true"
-            android:layout_marginTop="80dp"
-            android:background="@color/white"
-            tools:itemCount="6"
-            tools:listitem="@layout/rekomen_list_item" />
-
-        <androidx.appcompat.widget.SearchView
-            android:id="@+id/SearchView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="52dp"
-            android:layout_marginTop="22dp"
-            android:layout_marginBottom="16dp"
-            android:background="@drawable/searchview_background"
-            app:iconifiedByDefault="false"
-            app:queryBackground="@android:color/transparent"
-            app:queryHint="Cari" />
-
-
+            android:layout_marginTop="16dp"
+            android:layout_weight="1" />
     </RelativeLayout>
-
-    <ImageView
-        android:id="@+id/ivWishlist"
-        android:layout_width="30dp"
-        android:layout_height="32dp"
-        android:layout_marginEnd="24dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/cardView3"
-        android:src="@drawable/ic_wishlist"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
