--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -45,14 +45,7 @@
                     style="@style/poppinsBold24spWhite"
                     android:layout_width="wrap_content"
                     android:layout_height="35dp"
-                    android:text="Diskusi yuk!" />
-
-                <TextView
-                    android:id="@+id/tvSubTitle"
-                    style="@style/poppinsMed12spWhite"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Diskusikan dengan user lain" />
+                    android:text="DLupa Kata Sandi" />
             </LinearLayout>
         </RelativeLayout>
 
@@ -118,7 +111,8 @@ Untuk Menerima Kode Verifikasi"/>
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="15dp"
                 android:width="250dp"
-                android:backgroundTint="@color/SecondaryColor"
+                android:background="@drawable/rectangle_rounded"
+                android:backgroundTint="@color/PrimaryColor"
                 android:text="Kirim"
                 android:textAllCaps="false" />
         </RelativeLayout>
