--- a/app/src/main/res/layout/activity_wish_listku.xml
+++ b/app/src/main/res/layout/activity_wish_listku.xml
@@ -44,14 +44,14 @@
                     style="@style/poppinsBold24spWhite"
                     android:layout_width="wrap_content"
                     android:layout_height="35dp"
-                    android:text="Diskusi yuk!" />
+                    android:text="Wishlist ku" />
 
                 <TextView
                     android:id="@+id/tvSubTitle"
                     style="@style/poppinsMed12spWhite"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Diskusikan dengan user lain" />
+                    android:text="Daftar produk yang kamu simpan" />
             </LinearLayout>
         </RelativeLayout>
 
