--- a/app/src/main/res/layout/dialog_hapus_akun.xml
+++ b/app/src/main/res/layout/dialog_hapus_akun.xml
@@ -49,20 +49,25 @@
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp">
         <Button
+            style="@style/poppinsSemiBold16spWhite"
             android:id="@+id/btYa"
             android:layout_width="100dp"
             android:layout_height="50dp"
+            android:background="@drawable/rectangle_rounded"
             android:backgroundTint="@color/PrimaryColor"
             android:layout_marginEnd="50dp"
             android:textColor="@color/white"
+            android:textAllCaps="false"
             android:text="Iya" />
         <Button
+            style="@style/poppinsSemiBold16spWhite"
             android:id="@+id/btTidak"
             android:layout_width="100dp"
             android:layout_height="50dp"
+            android:background="@drawable/rectangle_rounded"
             android:backgroundTint="@color/PrimaryColor"
-            android:text="Tidak"
-            android:textColor="@color/white"/>
+            android:textAllCaps="false"
+            android:text="Tidak"/>
     </LinearLayout>
 
 
