--- a/app/src/main/res/layout/activity_edit_address.xml
+++ b/app/src/main/res/layout/activity_edit_address.xml
@@ -216,9 +216,11 @@
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:width="250dp"
-                    android:backgroundTint="@color/SecondaryColor"
+                    android:background="@drawable/rectangle_rounded"
+                    android:backgroundTint="@color/PrimaryColor"
                     android:text="Simpan"
                     android:clickable="true"
+                    android:textAllCaps="false"
                     android:layout_marginTop="32dp"
                     app:layout_constraintTop_toBottomOf="@+id/switchDefault"
                     app:layout_constraintStart_toStartOf="parent"
