--- a/app/src/main/res/layout/activity_edit_password.xml
+++ b/app/src/main/res/layout/activity_edit_password.xml
@@ -154,6 +154,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="15dp"
             android:width="250dp"
+            android:background="@drawable/rectangle_rounded"
             android:backgroundTint="@color/PrimaryColor"
             android:text="Simpan"
             android:textAllCaps="false"/>
