--- a/app/src/main/res/layout/activity_edit_profil_kucing.xml
+++ b/app/src/main/res/layout/activity_edit_profil_kucing.xml
@@ -205,7 +205,7 @@
                 android:id="@+id/jns_ras"/>
 
             <Button
-                style="@style/poppinsSemiBold16spBlack"
+                style="@style/poppinsSemiBold16spWhite"
                 android:id="@+id/btn_edt_profil"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
@@ -213,10 +213,10 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="15dp"
                 android:width="250dp"
-                android:backgroundTint="@color/SecondaryColor"
+                android:background="@drawable/rectangle_rounded"
+                android:backgroundTint="@color/PrimaryColor"
                 android:text="Selesai"
-                android:textAllCaps="false"
-                android:textColor="@color/white"/>
+                android:textAllCaps="false"/>
 
 
         </RelativeLayout>
