--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -79,7 +79,8 @@
         android:layout_below="@+id/txt_forgot"
         android:layout_centerHorizontal="true"
         android:text="Masuk"
-        android:layout_marginTop="14dp"/>
+        android:layout_marginTop="14dp"
+        android:textAllCaps="false"/>
     
     <LinearLayout
         android:layout_width="match_parent"
