--- a/app/src/main/res/layout/activity_otp_password.xml
+++ b/app/src/main/res/layout/activity_otp_password.xml
@@ -45,14 +45,7 @@
                     style="@style/poppinsBold24spWhite"
                     android:layout_width="wrap_content"
                     android:layout_height="35dp"
-                    android:text="Diskusi yuk!" />
-
-                <TextView
-                    android:id="@+id/tvSubTitle"
-                    style="@style/poppinsMed12spWhite"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Diskusikan dengan user lain" />
+                    android:text="Lupa Kata Sandi" /> />
             </LinearLayout>
         </RelativeLayout>
 
