--- a/app/src/main/res/layout/activity_pembayaran_chat.xml
+++ b/app/src/main/res/layout/activity_pembayaran_chat.xml
@@ -44,14 +44,7 @@
                     style="@style/poppinsBold24spWhite"
                     android:layout_width="wrap_content"
                     android:layout_height="35dp"
-                    android:text="Diskusi yuk!" />
-
-                <TextView
-                    android:id="@+id/tvSubTitle"
-                    style="@style/poppinsMed12spWhite"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Diskusikan dengan user lain" />
+                    android:text="Pembayaran" />
             </LinearLayout>
         </RelativeLayout>
 
@@ -379,14 +372,13 @@
             style="@style/poppinsSemiBold16spWhite"
             android:id="@+id/BtnBayarChat"
             android:text="Bayar"
-            android:textSize="15sp"
-            android:textColor="@color/white"
             android:paddingStart="15dp"
             android:paddingRight="15dp"
             android:layout_width="300dp"
             android:layout_gravity="center"
             android:background="@drawable/rectangle_rounded"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"/>
 
     </LinearLayout>
 
