--- a/app/src/main/res/layout/item_doctor_recommendation.xml
+++ b/app/src/main/res/layout/item_doctor_recommendation.xml
@@ -49,6 +49,7 @@
         android:id="@+id/btKonsultasi"
         android:background="@drawable/rectangle_rounded"
         android:text="Chat"
+        android:textAllCaps="false"
         android:layout_width="wrap_content"
         android:layout_height="45dp"
         android:layout_marginStart="65dp"
